--- a/Portfolio 3.Rmd
+++ b/Portfolio 3.Rmd
@@ -24,6 +24,190 @@ The questions you will have to answer are:
 1.2. Non Verbal IQ and ADOS
 1.3. Social IQ and ADOS
 
+```{r setup, include=FALSE}
+data = read.csv("Assignment3Data.csv")
+data = subset(data, Visit == 1)
+data = subset(data, ASD == 1)
+library(rethinking)
+
+#Scaling the data 
+data$ADOS = scale(data$ADOS)
+data$NonVerbalIQ = scale(data$NonVerbalIQ)
+data$VerbalIQ = scale(data$VerbalIQ)
+data$SocialIQ = scale(data$SocialIQ)
+
+#Centering
+data$ADOS = data$ADOS - mean(data$ADOS)
+data$NonVerbalIQ = data$NonVerbalIQ - mean(data$NonVerbalIQ)
+data$VerbalIQ = data$VerbalIQ - mean(data$VerbalIQ)
+data$SocialIQ = data$SocialIQ - mean(data$SocialIQ)
+
+plot(data$ADOS ~ data$VerbalIQ)
+#Making the model for verbal IQ
+verbalIQ <- map(alist(ADOS~dnorm(mu, sigma), 
+                  mu <- a + b*VerbalIQ, 
+                  a ~ dnorm(0,10),
+                  b~ dnorm(0,5),
+                  sigma ~ dunif(0,5)), data = data)
+#What are the values of the model
+precis(verbalIQ, corr = TRUE)
+
+#Plotting the values
+# Adjusting the scale, we want values from -10 to 15. by makes a datapoint for each 0.1. 
+ScaleVIQ.seq <- seq( from=-10 , to=15 , by=0.1 )
+# Simulating 1000 data points for each point on the scale
+mu <- link(verbalIQ, data=data.frame(VerbalIQ=ScaleVIQ.seq) )
+str(mu)
+#Making more variables
+mu.mean <- apply( mu , 2 , mean )
+mu.HPDI <- apply( mu , 2 , HPDI , prob=0.89 )
+
+sim.ADOS <- sim(verbalIQ , data=list(VerbalIQ=ScaleVIQ.seq) )
+#summarizing the distribution of the simulation
+ADOS.HPDI <- apply( sim.ADOS , 2 , HPDI , prob=0.89 )
+
+# plot raw data
+plot(ADOS ~ VerbalIQ , data , col=col.alpha(rangi2,0.5) )
+# draw MAP line, there is a point for each 0.1 so it becomes a line 
+lines( ScaleVIQ.seq , mu.mean )
+# draw HPDI region for line, there are two HPDI values making a shade that shows the uncertainty of the line
+# alpha, beta, SD
+shade(mu.HPDI , ScaleVIQ.seq)
+# draw PI region for simulated ADOS, the percentile interval. 
+shade(ADOS.HPDI , ScaleVIQ.seq)
+
+
+
+### SOCIAL IQ
+plot(data$ADOS ~ data$SocialIQ)
+
+#Making the model for social IQ
+socialIQ <- map(alist(ADOS~dnorm(mu, sigma), 
+                  mu <- a + b*SocialIQ, 
+                  a ~ dnorm(0,10),
+                  b~ dnorm(0,5),
+                  sigma ~ dunif(0,5)), data = data)
+#What are the values of the model
+precis(socialIQ, corr = TRUE)
+
+#Plotting the values
+# Adjusting the scale, we want values from -10 to 15. by makes a datapoint for each 0.1. 
+ScaleVIQ.seq <- seq( from=-20 , to=30 , by=0.1 )
+# Simulating 1000 data points for each point on the scale
+mu <- link(socialIQ, data=data.frame(SocialIQ=ScaleVIQ.seq) )
+str(mu)
+#Making more variables
+mu.mean <- apply( mu , 2 , mean )
+mu.HPDI <- apply( mu , 2 , HPDI , prob=0.89 )
+
+sim.ADOS <- sim(socialIQ , data=list(SocialIQ=ScaleVIQ.seq) )
+#summarizing the distribution of the simulation
+ADOS.HPDI <- apply( sim.ADOS , 2 , HPDI , prob=0.89 )
+
+# plot raw data
+plot(ADOS ~ SocialIQ , data , col=col.alpha(rangi2,0.5) )
+# draw MAP line, there is a point for each 0.1 so it becomes a line 
+lines( ScaleVIQ.seq , mu.mean )
+# draw HPDI region for line, there are two HPDI values making a shade that shows the uncertainty of the line
+# alpha, beta, SD
+shade(mu.HPDI , ScaleVIQ.seq)
+# draw PI region for simulated ADOS, the percentile interval. 
+shade(ADOS.HPDI , ScaleVIQ.seq)
+
+
+
+
+### Nonverbal IQ
+plot(data$ADOS ~ data$NonVerbalIQ)
+
+#Making the model for social IQ
+nonverbalIQ <- map(alist(ADOS~dnorm(mu, sigma), 
+                  mu <- a + b*NonVerbalIQ, 
+                  a ~ dnorm(0,10),
+                  b~ dnorm(0,5),
+                  sigma ~ dunif(0,5)), data = data)
+#What are the values of the model
+precis(nonverbalIQ, corr = TRUE)
+
+#Plotting the values
+# Adjusting the scale, we want values from -10 to 15. by makes a datapoint for each 0.1. 
+ScaleVIQ.seq <- seq( from=-20 , to=30 , by=0.1 )
+# Simulating 1000 data points for each point on the scale
+mu <- link(nonverbalIQ, data=data.frame(NonVerbalIQ=ScaleVIQ.seq) )
+str(mu)
+#Making more variables
+mu.mean <- apply( mu , 2 , mean )
+mu.HPDI <- apply( mu , 2 , HPDI , prob=0.89 )
+
+sim.ADOS <- sim(nonverbalIQ , data=list(NonVerbalIQ=ScaleVIQ.seq) )
+#summarizing the distribution of the simulation
+ADOS.HPDI <- apply( sim.ADOS , 2 , HPDI , prob=0.89 )
+
+# plot raw data
+plot(ADOS ~ NonVerbalIQ , data , col=col.alpha(rangi2,0.5) )
+# draw MAP line, there is a point for each 0.1 so it becomes a line 
+lines( ScaleVIQ.seq , mu.mean )
+# draw HPDI region for line, there are two HPDI values making a shade that shows the uncertainty of the line
+# alpha, beta, SD
+shade(mu.HPDI , ScaleVIQ.seq)
+# draw PI region for simulated ADOS, the percentile interval. 
+shade(ADOS.HPDI , ScaleVIQ.seq)
+```
+
+
+
+```{r setup, include=FALSE}
+#Trying to make a function
+
+model <- map(alist(ADOS~dnorm(mu, sigma), 
+                    mu <- a + b*VerbalIQ, 
+                    a ~ dnorm(a_mu,a_sigma),
+                    b ~ dnorm(b_mu,b_sigma),
+                    sigma ~ dunif(sigma_mu,sigma_sigma)), data = data)
+
+
+ADOS_function = function(data, model, IQ) {
+  #What are the values of the model
+  results = precis(model, corr = TRUE)
+  
+  #Plotting the values
+  # Adjusting the scale, we want values from -10 to 15. by makes a datapoint for each 0.1. 
+  data.seq <- seq( from=-15 , to=25 , by=0.1 )
+  # Simulating 1000 data points for each point on the scale
+  mu <- link(model, data=data.frame(IQ=data.seq) )
+  str(mu)
+  #Making more variables
+  mu.mean <- apply( mu , 2 , mean )
+  mu.HPDI <- apply( mu , 2 , HPDI , prob=0.89 )
+  
+  sim.ADOS <- sim(model, data=list(IQ=data.seq) )
+  #summarizing the distribution of the simulation
+  ADOS.HPDI <- apply( sim.ADOS , 2 , HPDI , prob=0.89 )
+  
+  plot = alist(
+  # plot raw data
+  plot(ADOS ~ IQ , data , col=col.alpha(rangi2,0.5) ),
+  # draw MAP line, there is a point for each 0.1 so it becomes a line 
+  lines( data.seq , mu.mean ),
+  # draw HPDI region for line, there are two HPDI values making a shade that shows the uncertainty of the line
+  # alpha, beta, SD
+  shade(mu.HPDI , data.seq),
+  # draw PI region for simulated ADOS, the percentile interval. 
+  shade(ADOS.HPDI , data.seq) )
+  
+  return(results)
+  return(plot)
+}
+
+socialIQ <- map(alist(ADOS~dnorm(mu, sigma), 
+                    mu <- a + b*SocialIQ, 
+                    a ~ dnorm(0,10),
+                    b ~ dnorm(0,5),
+                    sigma ~ dunif(0,5)), data = data)
+
+
+ADOS_function(data, socialIQ, data$SocialIQ)
+```
 2. Do the different aspects of IQ account for different portions of the variance in ADOS? 
 2.1. Does it make sense to have all IQ measures in the same model? First write a few lines answering the question and motivating your answer, including a discussion as to what happens when you put all of them in the same model. Then build a model following your answer. If your answer is "no", you are not free, you still have to answer: are there alternative ways of answering the question?
 2.2. Build the model, assess its quality, write a few lines interpreting the results.
