--- a/Portfolio 3.Rmd
+++ b/Portfolio 3.Rmd
@@ -30,23 +30,17 @@ data = subset(data, Visit == 1)
 data = subset(data, ASD == 1)
 library(rethinking)
 
-#Scaling the data 
-data$ADOS = scale(data$ADOS)
+
+#Scaling
 data$NonVerbalIQ = scale(data$NonVerbalIQ)
 data$VerbalIQ = scale(data$VerbalIQ)
 data$SocialIQ = scale(data$SocialIQ)
-
-#Centering
-data$ADOS = data$ADOS - mean(data$ADOS)
-data$NonVerbalIQ = data$NonVerbalIQ - mean(data$NonVerbalIQ)
-data$VerbalIQ = data$VerbalIQ - mean(data$VerbalIQ)
-data$SocialIQ = data$SocialIQ - mean(data$SocialIQ)
 
 plot(data$ADOS ~ data$VerbalIQ)
 #Making the model for verbal IQ
 verbalIQ <- map(alist(ADOS~dnorm(mu, sigma), 
                   mu <- a + b*VerbalIQ, 
-                  a ~ dnorm(0,10),
+                  a ~ dnorm(13,10),
                   b~ dnorm(0,5),
                   sigma ~ dunif(0,5)), data = data)
 #What are the values of the model
@@ -84,7 +78,7 @@ plot(data$ADOS ~ data$SocialIQ)
 #Making the model for social IQ
 socialIQ <- map(alist(ADOS~dnorm(mu, sigma), 
                   mu <- a + b*SocialIQ, 
-                  a ~ dnorm(0,10),
+                  a ~ dnorm(13,10),
                   b~ dnorm(0,5),
                   sigma ~ dunif(0,5)), data = data)
 #What are the values of the model
@@ -123,7 +117,7 @@ plot(data$ADOS ~ data$NonVerbalIQ)
 #Making the model for social IQ
 nonverbalIQ <- map(alist(ADOS~dnorm(mu, sigma), 
                   mu <- a + b*NonVerbalIQ, 
-                  a ~ dnorm(0,10),
+                  a ~ dnorm(13,10),
                   b~ dnorm(0,5),
                   sigma ~ dunif(0,5)), data = data)
 #What are the values of the model
@@ -155,68 +149,276 @@ shade(ADOS.HPDI , ScaleVIQ.seq)
 ```
 
 
-
-```{r setup, include=FALSE}
-#Trying to make a function
-
-model <- map(alist(ADOS~dnorm(mu, sigma), 
-                    mu <- a + b*VerbalIQ, 
-                    a ~ dnorm(a_mu,a_sigma),
-                    b ~ dnorm(b_mu,b_sigma),
-                    sigma ~ dunif(sigma_mu,sigma_sigma)), data = data)
-
-
-ADOS_function = function(data, model, IQ) {
-  #What are the values of the model
-  results = precis(model, corr = TRUE)
-  
-  #Plotting the values
-  # Adjusting the scale, we want values from -10 to 15. by makes a datapoint for each 0.1. 
-  data.seq <- seq( from=-15 , to=25 , by=0.1 )
-  # Simulating 1000 data points for each point on the scale
-  mu <- link(model, data=data.frame(IQ=data.seq) )
-  str(mu)
-  #Making more variables
-  mu.mean <- apply( mu , 2 , mean )
-  mu.HPDI <- apply( mu , 2 , HPDI , prob=0.89 )
-  
-  sim.ADOS <- sim(model, data=list(IQ=data.seq) )
-  #summarizing the distribution of the simulation
-  ADOS.HPDI <- apply( sim.ADOS , 2 , HPDI , prob=0.89 )
-  
-  plot = alist(
-  # plot raw data
-  plot(ADOS ~ IQ , data , col=col.alpha(rangi2,0.5) ),
-  # draw MAP line, there is a point for each 0.1 so it becomes a line 
-  lines( data.seq , mu.mean ),
-  # draw HPDI region for line, there are two HPDI values making a shade that shows the uncertainty of the line
-  # alpha, beta, SD
-  shade(mu.HPDI , data.seq),
-  # draw PI region for simulated ADOS, the percentile interval. 
-  shade(ADOS.HPDI , data.seq) )
-  
-  return(results)
-  return(plot)
-}
-
-socialIQ <- map(alist(ADOS~dnorm(mu, sigma), 
-                    mu <- a + b*SocialIQ, 
-                    a ~ dnorm(0,10),
-                    b ~ dnorm(0,5),
-                    sigma ~ dunif(0,5)), data = data)
-
-
-ADOS_function(data, socialIQ, data$SocialIQ)
-```
 2. Do the different aspects of IQ account for different portions of the variance in ADOS? 
 2.1. Does it make sense to have all IQ measures in the same model? First write a few lines answering the question and motivating your answer, including a discussion as to what happens when you put all of them in the same model. Then build a model following your answer. If your answer is "no", you are not free, you still have to answer: are there alternative ways of answering the question?
 2.2. Build the model, assess its quality, write a few lines interpreting the results.
 
+```{r setup, include=FALSE}
+library(rethinking)
+library(cowplot)
+library(ggplot2)
+#Loading data
+data2 = read.csv("Assignment3Data.csv")
+data2 = subset(data2, Visit == 1)
+data2 = subset(data2, ASD == 1)
+
+### Correlation test
+cor.test(data2$VerbalIQ, data$SocialIQ)
+cor.test(data2$VerbalIQ, data$NonVerbalIQ)
+cor.test(data2$NonVerbalIQ, data$SocialIQ)
+
+
+#Scaling the data
+data3 = read.csv("Assignment3Data.csv")
+data3 = subset(data3, Visit == 1)
+data3 = subset(data3, ASD == 1)
+
+data3$NonVerbalIQ = scale(data3$NonVerbalIQ)
+data3$VerbalIQ = scale(data3$VerbalIQ)
+data3$SocialIQ = scale(data3$SocialIQ)
+
+#Social model
+m_S <- map(alist(SocialIQ~dnorm(mu, sigma), 
+                  mu <- a + b_V*VerbalIQ + b_NV*NonVerbalIQ, 
+                  a ~ dnorm(0,5),
+                  b_V ~ dnorm(0,5),
+                  b_NV ~ dnorm(0,5),
+                  sigma ~ dunif(0,10)), data = data3)
+mu_S <- coef(m_S)['a'] + coef(m_S)['b_V']*data3$VerbalIQ + coef(m_S)['b_NV']*data3$NonVerbalIQ
+#compute residual for each state
+m.resid_S <- data3$SocialIQ - mu_S
+
+
+plot_S <- ggplot(data3, aes(x = m.resid_S, y = ADOS)) + geom_smooth(method = "lm") + geom_point() + xlab("SocialIQ residuals")
+plot_S
+
+#Verbal model
+m_V <- map(alist(VerbalIQ~dnorm(mu, sigma), 
+                  mu <- a + b_S*SocialIQ + b_NV*NonVerbalIQ, 
+                  a ~ dnorm(0,5),
+                  b_S ~ dnorm(0,5),
+                  b_NV ~ dnorm(0,5),
+                  sigma ~ dunif(0,10)), data = data3)
+mu_V <- coef(m_V)['a'] + coef(m_V)['b_S']*data3$VerbalIQ + coef(m_V)['b_NV']*data3$NonVerbalIQ
+#compute residual for each state
+m.resid_V <- data3$VerbalIQ - mu_V
+
+
+plot_V <- ggplot(data3, aes(x = m.resid_V, y = ADOS)) + geom_smooth(method = "lm") + geom_point() + xlab("VerbalIQ residuals")
+plot_V
+
+#Nonverbal model
+m_NV <- map(alist(NonVerbalIQ~dnorm(mu, sigma), 
+                  mu <- a + b_V*VerbalIQ + b_S*SocialIQ, 
+                  a ~ dnorm(0,5),
+                  b_V ~ dnorm(0,5),
+                  b_S ~ dnorm(0,5),
+                  sigma ~ dunif(0,10)), data = data3)
+mu_NV <- coef(m_NV)['a'] + coef(m_NV)['b_V']*data3$VerbalIQ + coef(m_NV)['b_S']*data3$SocialIQ
+#compute residual for each state
+m.resid_NV <- data3$NonVerbalIQ - mu_NV
+
+
+plot_NV <- ggplot(data3, aes(x = m.resid_NV, y = ADOS)) + geom_smooth(method = "lm") + geom_point() + xlab("NonverbalIQ residuals")
+plot_NV
+
+plot_grid(plot_S, plot_V, plot_NV)
+
+#The plots show how much variance each variable explains when the other two variables has been used. 
+#It looks like SocialIQ explains the most when VerbalIQ and NonVerbalIQ have explained, but all three variables contribute with unique information so we will make a model with all three variables:
+
+#Building a model with the relevant IQ measures in. 
+m1 <- map(alist(ADOS~dnorm(mu, sigma), 
+                  mu <- a + b_S*SocialIQ + b_V*VerbalIQ + b_NV*NonVerbalIQ, 
+                  a ~ dnorm(0,10),
+                  b_S ~ dnorm(0,10),
+                  b_V ~ dnorm(0,10),
+                  b_NV ~ dnorm(0,10),
+                  sigma ~ dunif(0,15)), data = data3)
+#What are the values of the model
+precis(m1)
+plot(precis(m1))
+
+#Quality check of the model
+mu <- link( m1)
+# summarize samples across cases
+mu.mean <- apply( mu , 2 , mean )
+mu.HPDI <- apply( mu , 2 , HPDI )
+# simulate observations
+# again no new data, so uses original data
+ADOS.sim <- sim( m1 , n=1e4 )
+ADOS.HPDI <- apply( ADOS.sim , 2 , HPDI )
+
+#plotting
+plot( mu.mean ~ data3$ADOS , col=rangi2 , ylim=range(mu.HPDI) ,
+xlab="Observed ADOS" , ylab="Predicted ADOS" )
+abline( a=0 , b=1 , lty=2 )
+for ( i in 1:nrow(data3) )
+lines( rep(data3$ADOS[i],2) , c(mu.HPDI[1,i],mu.HPDI[2,i]) ,
+col=rangi2 )
+
+```
+
 3. Let's now include also the TD children. Does it make sense to ask whether IQ and ADOS are related? Motivate your answer. In any case, if you wanted to build a model to answer that question, which model would you build? Run the model, assess its quality, write a few lines interpreting the results.
+
+```{r setup, include=FALSE}
+data4 = read.csv("Assignment3Data.csv")
+data4 = subset(data4, Visit == 1)
+
+#Scaling
+data4$NonVerbalIQ = scale(data4$NonVerbalIQ)
+data4$VerbalIQ = scale(data4$VerbalIQ)
+data4$SocialIQ = scale(data4$SocialIQ)
+
+data4 = na.omit(data4)
+
+m4 <- map(alist(ADOS~dnorm(mu, sigma), 
+                  mu <- a + b_S*SocialIQ + b_V*VerbalIQ + b_NV*NonVerbalIQ, 
+                  a ~ dnorm(0,5),
+                  b_S ~ dnorm(0,5),
+                  b_V ~ dnorm(0,5),
+                  b_NV ~ dnorm(0,5),
+                  sigma ~ dunif(0,10)), data = data4)
+#What are the values of the model
+precis(m4)
+plot(precis(m1))
+
+#Quality check of the model
+mu <- link( m4)
+# summarize samples across cases
+mu.mean <- apply( mu , 2 , mean )
+mu.HPDI <- apply( mu , 2 , HPDI )
+# simulate observations
+# again no new data, so uses original data
+ADOS.sim <- sim( m4 , n=1e4 )
+ADOS.HPDI <- apply( ADOS.sim , 2 , HPDI )
+
+data4$ASD = as.factor(data4$ASD)
+library(RColorBrewer)
+#all palette available from RColorBrewer
+display.brewer.all()
+#we will select the first 4 colors in the Set1 palette
+cols<-brewer.pal(n=2,name="Set1")
+#cols contain the names of four different colors
+#create a color vector corresponding to levels in the T1 variable in dat
+cols_ASD<-cols[data4$ASD]
+
+#plotting
+plot( mu.mean ~ data4$ADOS , data4, col=cols_ASD , pch=16, ylim=range(mu.HPDI) ,
+xlab="Observed ADOS" , ylab="Predicted ADOS" )
+abline( a=0 , b=1 , lty=2 )
+for ( i in 1:nrow(data4) )
+lines( rep(data4$ADOS[i],2) , c(mu.HPDI[1,i],mu.HPDI[2,i]) ,
+col=rangi2 )
+
+
+```
 
 4. Let's discuss contents:
 4.1. You have three scores for IQ, do they show shared variance? Is that the same in TD and ASD? What does that tell us about IQ?
 4.2. You have explored the relation between IQ and ADOS. How do you explain that relation from a cognitive perspective? N.B. You can present alternative hypotheses.
+
+```{r setup, include=FALSE}
+#Loading data
+data5 = read.csv("Assignment3Data.csv")
+data5 = subset(data5, Visit == 1)
+data5 = subset(data5, ASD == 0)
+
+#Scaling the data
+data5 = read.csv("Assignment3Data.csv")
+data5 = subset(data5, Visit == 1)
+data5 = subset(data5, ASD == 1)
+data5 = na.omit(data5)
+
+data5$NonVerbalIQ = scale(data5$NonVerbalIQ)
+data5$VerbalIQ = scale(data5$VerbalIQ)
+data5$SocialIQ = scale(data5$SocialIQ)
+
+#Social model
+m_S_TD <- map(alist(SocialIQ~dnorm(mu, sigma), 
+                  mu <- a + b_V*VerbalIQ + b_NV*NonVerbalIQ, 
+                  a ~ dnorm(0,5),
+                  b_V ~ dnorm(0,5),
+                  b_NV ~ dnorm(0,5),
+                  sigma ~ dunif(0,10)), data = data5)
+mu_S_TD <- coef(m_S_TD)['a'] + coef(m_S_TD)['b_V']*data5$VerbalIQ + coef(m_S_TD)['b_NV']*data5$NonVerbalIQ
+#compute residual for each state
+m.resid_S_TD <- data5$SocialIQ - mu_S_TD
+
+
+plot_S_TD <- ggplot(data5, aes(x = m.resid_S_TD, y = ADOS)) + geom_smooth(method = "lm") + geom_point() + xlab("SocialIQ residuals")
+plot_S_TD
+
+#Verbal model
+m_V_TD <- map(alist(VerbalIQ~dnorm(mu, sigma), 
+                  mu <- a + b_S*SocialIQ + b_NV*NonVerbalIQ, 
+                  a ~ dnorm(0,5),
+                  b_S ~ dnorm(0,5),
+                  b_NV ~ dnorm(0,5),
+                  sigma ~ dunif(0,10)), data = data5)
+mu_V_TD <- coef(m_V_TD)['a'] + coef(m_V_TD)['b_S']*data5$VerbalIQ + coef(m_V_TD)['b_NV']*data5$NonVerbalIQ
+#compute residual for each state
+m.resid_V_TD <- data5$VerbalIQ - mu_V_TD
+
+
+plot_V_TD <- ggplot(data5, aes(x = m.resid_V_TD, y = ADOS)) + geom_smooth(method = "lm") + geom_point() + xlab("VerbalIQ residuals")
+plot_V_TD
+
+#Nonverbal model
+m_NV_TD <- map(alist(NonVerbalIQ~dnorm(mu, sigma), 
+                  mu <- a + b_V*VerbalIQ + b_S*SocialIQ, 
+                  a ~ dnorm(0,5),
+                  b_V ~ dnorm(0,5),
+                  b_S ~ dnorm(0,5),
+                  sigma ~ dunif(0,10)), data = data5)
+mu_NV_TD <- coef(m_NV_TD)['a'] + coef(m_NV_TD)['b_V']*data5$VerbalIQ + coef(m_NV_TD)['b_S']*data5$SocialIQ
+#compute residual for each state
+m.resid_NV_TD <- data5$NonVerbalIQ - mu_NV_TD
+
+
+plot_NV_TD <- ggplot(data5, aes(x = m.resid_NV_TD, y = ADOS)) + geom_smooth(method = "lm") + geom_point() + xlab("NonverbalIQ residuals")
+plot_NV_TD
+
+plot_grid(plot_S_TD, plot_V_TD, plot_NV_TD)
+
+
+
+
+
+
+#The plots show how much variance each variable explains when the other two variables has been used. 
+#It looks like SocialIQ explains the most when VerbalIQ and NonVerbalIQ have explained, but all three variables contribute with unique information so we will make a model with all three variables:
+
+#Building a model with the relevant IQ measures in. 
+m1 <- map(alist(ADOS~dnorm(mu, sigma), 
+                  mu <- a + b_S*SocialIQ + b_V*VerbalIQ + b_NV*NonVerbalIQ, 
+                  a ~ dnorm(0,10),
+                  b_S ~ dnorm(0,10),
+                  b_V ~ dnorm(0,10),
+                  b_NV ~ dnorm(0,10),
+                  sigma ~ dunif(0,15)), data = data3)
+#What are the values of the model
+precis(m1)
+plot(precis(m1))
+
+#Quality check of the model
+mu <- link( m1)
+# summarize samples across cases
+mu.mean <- apply( mu , 2 , mean )
+mu.HPDI <- apply( mu , 2 , HPDI )
+# simulate observations
+# again no new data, so uses original data
+ADOS.sim <- sim( m1 , n=1e4 )
+ADOS.HPDI <- apply( ADOS.sim , 2 , HPDI )
+
+#plotting
+plot( mu.mean ~ data3$ADOS , col=rangi2 , ylim=range(mu.HPDI) ,
+xlab="Observed ADOS" , ylab="Predicted ADOS" )
+abline( a=0 , b=1 , lty=2 )
+for ( i in 1:nrow(data3) )
+lines( rep(data3$ADOS[i],2) , c(mu.HPDI[1,i],mu.HPDI[2,i]) ,
+col=rangi2 )
+```
 
 5. Bonus questions: Including measurement errors. 
 5.1. Let's assume that ADOS has a measurement error of 1. How would you model that in any of the previous models? 
